fixed navbar spacing

--- a/client/src/components/starbucksCard/StarbucksCard.css
+++ b/client/src/components/starbucksCard/StarbucksCard.css
@@ -9,7 +9,7 @@
     opacity: .5;
 }
 
-img {
+.starbPic {
     height: 300px;
     width: 250px;
 
